FastAPI_Nginx_Minukube/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
        ports:
        - containerPort: 4180
        args:
        - --provider=azure
        - --client-id=a94a0481-d8f9-497f-9bad-9f68bd5fd715
        - --client-secret=6456822e-5465-44ff-8303-530e6be84d8b
        - --cookie-secret=HEi8AixQxb7dpdll2OBeaQ==
        - --redirect-url=https://4.157.144.26.nip.io/oauth2/callback
        - --email-domain=*
        - --upstream=http://localhost:8080
        - --http-address=0.0.0.0:4180
        - --whitelist-domain=4.157.144.26.nip.io
